5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1593_2425.log
== TEST (2019-03-27 13:00:55) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

print(round(distancia/combustivel,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:01:14) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

print(round(distancia/combustivel,3))
-- EXECUTION TIME:
0.193359
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:01:17) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

print(round(distancia/combustivel,3))
-- EXECUTION TIME:
0.128034
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:01:26) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

print(round(distancia/combustivel,3))
-- OUTPUT:
14.286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:01:42) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

print(round(distancia/combustivel,3)+ "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(distancia/combustivel,3)+ "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:02:44) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

print(round(distancia/combustivel + "km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(distancia/combustivel + "km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:03:25) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))
media distancia/combustivel
print(round(media,3) + "km/l")
-- ERROR:
File "XXXX", line 3
    media distancia/combustivel
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:03:39) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

media = distancia/combustivel

print(round(media,3) + "km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(media,3) + "km/l")
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:04:36) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

media = distancia/combustivel

print(round(media + "km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(media + "km/l",3))
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:06:12) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

media = distancia/combustivel

print(round(media,3)) "km/l"

-- ERROR:
File "XXXX", line 6
    print(round(media,3)) "km/l"
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 13:06:52) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

media = distancia/combustivel

print(round(media,3),"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 13:06:59) 
-- CODE:
distancia = float(input("Digite a distancai percorrida: "))
combustivel = float(input("Digite o gasto em litros: "))

media = distancia/combustivel

print(round(media,3),"km/l")

-- EXECUTION TIME:
0.119277
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
